--- a/properties.ipynb
+++ b/properties.ipynb
@@ -908,7 +908,6 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Define a bounding box for Warsaw (adjust these values to your preference)\n",
     "min_lat, max_lat = 52.0, 52.5\n",
     "min_lon, max_lon = 20.8, 21.3\n",
     "\n",
@@ -922,7 +921,6 @@
     "    (housing_warsaw[\"Longitude\"] <= max_lon)\n",
     ")\n",
     "\n",
-    "# Optionally, filter out extremely high \"Price per m2\" outliers.\n",
     "# Below, we remove prices above (max_price - 75000).\n",
     "# Adjust this logic to suit your data (e.g., use a percentile cutoff or std-based filter).\n",
     "price_cutoff = housing_warsaw[\"Price per m2\"].max() #- 75000\n",
@@ -979,7 +977,7 @@
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Define a bounding box for Warsaw (adjust these values to your preference)\n",
+    "# Define a bounding box for Warsaw\n",
     "min_lat, max_lat = 52.0, 52.5\n",
     "min_lon, max_lon = 20.8, 21.3\n",
     "\n",
@@ -991,42 +989,35 @@
     "    (housing_warsaw[\"Longitude\"] <= max_lon)\n",
     ")\n",
     "\n",
-    "# Optionally, filter out extremely high \"Price per m2\" outliers\n",
-    "price_cutoff = housing_warsaw[\"Price per m2\"].max()  # e.g., .max() or max_price - 75000\n",
+    "price_cutoff = housing_warsaw[\"Price per m2\"].max() \n",
     "price_mask = housing_warsaw[\"Price per m2\"] <= price_cutoff\n",
     "\n",
-    "# Combine both masks\n",
     "mask = geo_mask & price_mask\n",
     "\n",
-    "# Apply the mask\n",
     "housing_warsaw_filtered = housing_warsaw[mask].copy()\n",
     "\n",
-    "# 1) Sort ascending so highest prices come last (and thus appear on top)\n",
     "housing_warsaw_sorted = housing_warsaw_filtered.sort_values(by=\"Price per m2\", ascending=True)\n",
     "\n",
-    "# Compute price range (or filter range if you prefer)\n",
     "price_min = 5000\n",
     "price_max = 30000\n",
     "\n",
     "plt.figure(figsize=(10, 8))\n",
     "\n",
-    "# 2) Plot using the sorted DataFrame\n",
     "scatter = plt.scatter(\n",
-    "    housing_warsaw_sorted[\"Latitude\"],   # x-coord (though typically Longitude goes on x-axis)\n",
+    "    housing_warsaw_sorted[\"Latitude\"],   # x-coord \n",
     "    housing_warsaw_sorted[\"Longitude\"],  # y-coord\n",
     "    alpha=0.5,\n",
     "    c=housing_warsaw_sorted[\"Price per m2\"],\n",
     "    cmap=\"jet\",\n",
     "    vmin=price_min,\n",
     "    vmax=price_max,\n",
-    "    # norm=mpl.colors.LogNorm(vmin=price_min, vmax=price_max)  # Uncomment for a log scale\n",
+    "\n",
     ")\n",
     "\n",
     "plt.xlabel(\"Latitude\")\n",
     "plt.ylabel(\"Longitude\")\n",
-    "plt.title(\"Warsaw Housing Locations by Price per m²\")  # Remove “(Log Scale)” if not using log\n",
+    "plt.title(\"Warsaw Housing Locations by Price per m²\") \n",
     "\n",
-    "# Add a colorbar\n",
     "cbar = plt.colorbar(scatter)\n",
     "cbar.set_label(\"Price per m²\")\n",
     "\n",
